--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 }
 
 dependencies {
+    implementation 'org.jetbrains:annotations:15.0'
     def room_version = "2.3.0"
     def lifecycle_version = "2.3.1"
     
